# mvp-machine-learning

./: .gitignore  README.md  consolidar_arquivos.py  mvp_ml_analytics_2026.ipynb  pyproject.toml
